# concord-bft

bftengine/include/bftengine/: ControlStateManager.hpp  ReplicaConfig.hpp  SimpleClient.hpp
bftengine/src/bftengine/: Crypto.cpp  Crypto.hpp  MsgsCommunicator.cpp  MsgsCommunicator.hpp  ReplicaBase.cpp  ReplicaBase.hpp  ReplicaImp.cpp  ReplicaImp.hpp  ReplicaLoader.cpp  ReplicasInfo.hpp  SigManager.cpp  SigManager.hpp  ViewsManager.cpp  ViewsManager.hpp
bftengine/src/preprocessor/: PreProcessor.cpp  PreProcessor.hpp
bftengine/src/preprocessor/messages/: PreProcessReplyMsg.cpp  PreProcessReplyMsg.hpp
bftengine/src/preprocessor/tests/: CMakeLists.txt
bftengine/tests/messages/: ReplicaAsksToLeaveViewMsg_test.cpp  ViewChangeMsg_test.cpp  helper.cpp  helper.hpp
bftengine/tests/testViewChange/: testViewChange.cpp
client/client_pool/: CMakeLists.txt
client/client_pool/include/client/client_pool/: concord_client_pool.hpp
client/client_pool/src/: concord_client_pool.cpp
client/clientservice/include/client/clientservice/: client_service.hpp
client/clientservice/src/: main.cpp  request_service.cpp
